{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 82,
  "lineage": "0997cf8c-fcff-7212-d07c-86c839011634",
  "resources": [
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-09b1c94935b197843",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b1c94935b197843",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0172363ee4def7d61",
            "private_dns": "ip-10-0-1-186.me-south-1.compute.internal",
            "private_ip": "10.0.1.186",
            "public_ip": "157.175.65.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05c7fb72b01110eaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a7823735673a9b7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9760c7bd9533c58"
            ]
          },
          "dependencies": [
            "module.dev.aws_key_pair.env_keypair",
            "module.dev.aws_security_group.env_sg",
            "module.dev.aws_subnet.env_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-06f6abb9bc5d5f8d4",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f6abb9bc5d5f8d4",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09b4ce7007f4f3c72",
            "private_dns": "ip-10-0-1-139.me-south-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_ip": "15.185.82.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bafecae754408826",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8234ccb82e5db2c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad6c1b4aa80d0396"
            ]
          },
          "dependencies": [
            "module.test.aws_key_pair.env_keypair",
            "module.test.aws_security_group.env_sg",
            "module.test.aws_subnet.env_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-0273520e75d894d4f",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0273520e75d894d4f",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0867c0a1c69e52677",
            "private_dns": "ip-10-0-1-49.me-south-1.compute.internal",
            "private_ip": "10.0.1.49",
            "public_ip": "15.185.200.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e2b72dd5e4a62630",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa61d667ca905925",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f752da97dda35a2d"
            ]
          },
          "dependencies": [
            "module.prod.aws_key_pair.env_keypair",
            "module.prod.aws_security_group.env_sg",
            "module.prod.aws_subnet.env_subnet",
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-031529c5c2e129d84",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031529c5c2e129d84",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f8aad900e8991b4",
            "private_dns": "ip-10-0-1-42.me-south-1.compute.internal",
            "private_ip": "10.0.1.42",
            "public_ip": "15.185.204.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06c51e2e12d1907b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a7823735673a9b7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9760c7bd9533c58"
            ]
          },
          "dependencies": [
            "module.dev.aws_key_pair.env_keypair",
            "module.dev.aws_security_group.env_sg",
            "module.dev.aws_subnet.env_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-0aeeae20c2e40cbcb",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aeeae20c2e40cbcb",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003d59220de673786",
            "private_dns": "ip-10-0-1-161.me-south-1.compute.internal",
            "private_ip": "10.0.1.161",
            "public_ip": "15.185.41.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-004c6b1883b49b67b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a7823735673a9b7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9760c7bd9533c58"
            ]
          },
          "dependencies": [
            "module.dev.aws_key_pair.env_keypair",
            "module.dev.aws_security_group.env_sg",
            "module.dev.aws_subnet.env_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-0a9a2fb6c03758e26",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9a2fb6c03758e26",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d1dac77fd0eee28",
            "private_dns": "ip-10-0-1-68.me-south-1.compute.internal",
            "private_ip": "10.0.1.68",
            "public_ip": "157.175.45.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06f7ae2a8c33c1211",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8234ccb82e5db2c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad6c1b4aa80d0396"
            ]
          },
          "dependencies": [
            "module.test.aws_key_pair.env_keypair",
            "module.test.aws_security_group.env_sg",
            "module.test.aws_subnet.env_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-0da67ef9eaf69841b",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da67ef9eaf69841b",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00759ed1ee20db1f0",
            "private_dns": "ip-10-0-1-45.me-south-1.compute.internal",
            "private_ip": "10.0.1.45",
            "public_ip": "15.185.55.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-068394185a09d7cb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8234ccb82e5db2c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad6c1b4aa80d0396"
            ]
          },
          "dependencies": [
            "module.test.aws_key_pair.env_keypair",
            "module.test.aws_security_group.env_sg",
            "module.test.aws_subnet.env_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-052ba9218c68f9bae",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052ba9218c68f9bae",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02aa930af841c50db",
            "private_dns": "ip-10-0-1-237.me-south-1.compute.internal",
            "private_ip": "10.0.1.237",
            "public_ip": "15.185.55.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-058a1751697880822",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa61d667ca905925",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f752da97dda35a2d"
            ]
          },
          "dependencies": [
            "module.prod.aws_key_pair.env_keypair",
            "module.prod.aws_security_group.env_sg",
            "module.prod.aws_subnet.env_subnet",
            "module.prod.aws_vpc.env"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cd084e624f0ac22",
            "arn": "arn:aws:ec2:me-south-1:955529121017:instance/i-0d9e779d971bef1e6",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9e779d971bef1e6",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c7c1d5986023215",
            "private_dns": "ip-10-0-1-81.me-south-1.compute.internal",
            "private_ip": "10.0.1.81",
            "public_ip": "15.185.55.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066c55199f62f0bcf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa61d667ca905925",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f752da97dda35a2d"
            ]
          },
          "dependencies": [
            "module.prod.aws_key_pair.env_keypair",
            "module.prod.aws_security_group.env_sg",
            "module.prod.aws_subnet.env_subnet",
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "env_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:internet-gateway/igw-088d4c32e22e847fe",
            "id": "igw-088d4c32e22e847fe",
            "owner_id": "955529121017",
            "vpc_id": "vpc-02208439f58a34996"
          },
          "dependencies": [
            "module.dev.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "env_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:internet-gateway/igw-093faa4a7b1bc3ee1",
            "id": "igw-093faa4a7b1bc3ee1",
            "owner_id": "955529121017",
            "vpc_id": "vpc-0e2b91d25156e5c67"
          },
          "dependencies": [
            "module.test.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "env_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:internet-gateway/igw-0bf4f3ff44ffca644",
            "id": "igw-0bf4f3ff44ffca644",
            "owner_id": "955529121017",
            "vpc_id": "vpc-0b0d632985985d77f"
          },
          "dependencies": [
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "env_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-088d4c32e22e847fe",
            "id": "r-rtb-0c4312c16f92d55f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4312c16f92d55f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.dev.aws_internet_gateway.env_gateway",
            "module.dev.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_route",
      "name": "env_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-093faa4a7b1bc3ee1",
            "id": "r-rtb-079d26a87291e769d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079d26a87291e769d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.test.aws_internet_gateway.env_gateway",
            "module.test.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "env_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bf4f3ff44ffca644",
            "id": "r-rtb-0d2f22f0e4b534b7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2f22f0e4b534b7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.prod.aws_internet_gateway.env_gateway",
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "env_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:security-group/sg-0a9760c7bd9533c58",
            "description": "Ingress on 22+80, +egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9760c7bd9533c58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "dev_http_and_ssh",
            "name_prefix": null,
            "owner_id": "955529121017",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02208439f58a34996"
          },
          "dependencies": [
            "module.dev.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "env_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:security-group/sg-0ad6c1b4aa80d0396",
            "description": "Ingress on 22+80, +egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad6c1b4aa80d0396",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "test_http_and_ssh",
            "name_prefix": null,
            "owner_id": "955529121017",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2b91d25156e5c67"
          },
          "dependencies": [
            "module.test.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "env_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:security-group/sg-0f752da97dda35a2d",
            "description": "Ingress on 22+80, +egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f752da97dda35a2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "prod_http_and_ssh",
            "name_prefix": null,
            "owner_id": "955529121017",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b0d632985985d77f"
          },
          "dependencies": [
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "env_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:subnet/subnet-05a7823735673a9b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1b",
            "availability_zone_id": "mes1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05a7823735673a9b7",
            "map_public_ip_on_launch": true,
            "owner_id": "955529121017",
            "vpc_id": "vpc-02208439f58a34996"
          },
          "dependencies": [
            "module.dev.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "env_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:subnet/subnet-0d8234ccb82e5db2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1a",
            "availability_zone_id": "mes1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d8234ccb82e5db2c",
            "map_public_ip_on_launch": true,
            "owner_id": "955529121017",
            "vpc_id": "vpc-0e2b91d25156e5c67"
          },
          "dependencies": [
            "module.test.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "env_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:subnet/subnet-0aa61d667ca905925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1a",
            "availability_zone_id": "mes1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aa61d667ca905925",
            "map_public_ip_on_launch": true,
            "owner_id": "955529121017",
            "vpc_id": "vpc-0b0d632985985d77f"
          },
          "dependencies": [
            "module.prod.aws_vpc.env"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:vpc/vpc-02208439f58a34996",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b791724a5f37d6b2",
            "default_route_table_id": "rtb-0c4312c16f92d55f6",
            "default_security_group_id": "sg-070305c4151846094",
            "dhcp_options_id": "dopt-d014fbb9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02208439f58a34996",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4312c16f92d55f6",
            "owner_id": "955529121017"
          }
        }
      ]
    },
    {
      "module": "module.test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:vpc/vpc-0e2b91d25156e5c67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08399b87f78b5504d",
            "default_route_table_id": "rtb-079d26a87291e769d",
            "default_security_group_id": "sg-0162295d864009fc7",
            "dhcp_options_id": "dopt-d014fbb9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e2b91d25156e5c67",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079d26a87291e769d",
            "owner_id": "955529121017"
          }
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:955529121017:vpc/vpc-0b0d632985985d77f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5a19b6e069d17dc",
            "default_route_table_id": "rtb-0d2f22f0e4b534b7f",
            "default_security_group_id": "sg-0ee08cd9b0b04b915",
            "dhcp_options_id": "dopt-d014fbb9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b0d632985985d77f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d2f22f0e4b534b7f",
            "owner_id": "955529121017"
          }
        }
      ]
    }
  ]
}